--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/mhaidarh/express-workshop/issues"
   },
-  "homepage": "https://github.com/mhaidarh/express-workshop#readme"
+  "homepage": "https://github.com/mhaidarh/express-workshop#readme",
+  "dependencies": {
+    "express": "4.14.0"
+  }
 }
