--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "express-workshop",
   "version": "1.0.0",
   "description": "Express Workshop",
-  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "mocha"
   },
   "repository": {
