--- a/client/package.json
+++ b/client/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/mhaidarh/express-workshop/issues"
   },
-  "homepage": "https://github.com/mhaidarh/express-workshop#readme"
+  "homepage": "https://github.com/mhaidarh/express-workshop#readme",
+  "dependencies": {
+    "jquery": "3.1.1",
+    "semantic-ui-css": "2.2.4"
+  }
 }
