--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "cors": "2.8.1",
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "mongodb": "2.2.11",
+    "mongoose": "4.6.5"
   }
 }
