--- a/client/bower.json
+++ b/client/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.1",
-    "semantic": "^2.2.6"
+    "semantic": "^2.2.6",
+    "ejs": "^1.0.0"
   }
 }
