--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "jquery": "^3.1.1",
     "semantic": "^2.2.6",
-    "ejs": "^1.0.0"
+    "ejs": "^1.0.0",
+    "handlebars": "^4.0.5"
   }
 }
