--- a/client/bower.json
+++ b/client/bower.json
@@ -24,6 +24,10 @@
     "jquery": "^3.1.1",
     "semantic": "^2.2.6",
     "ejs": "^1.0.0",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "vue": "^2.0.3",
+    "vue-resource": "^1.0.3",
+    "vue-router": "^2.0.1",
+    "vuex": "^2.0.0"
   }
 }
