--- a/client/bower.json
+++ b/client/bower.json
@@ -28,6 +28,7 @@
     "vue": "^2.0.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
-    "vuex": "^2.0.0"
+    "vuex": "^2.0.0",
+    "axios": "^0.15.2"
   }
 }
