--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "dotenv": "2.0.0",
     "express": "4.14.0",
     "mongodb": "2.2.11",
-    "mongoose": "4.6.5"
+    "mongoose": "4.6.5",
+    "mongoose-search-plugin": "0.1.2",
+    "mongoose-text-search": "0.0.2"
   }
 }
