--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,18 @@
     "cors": "2.8.1",
     "dotenv": "2.0.0",
     "express": "4.14.0",
+    "express-validator": "2.21.0",
     "mongodb": "2.2.11",
     "mongoose": "4.6.5",
     "mongoose-search-plugin": "0.1.2",
     "mongoose-text-search": "0.0.2",
-    "passport-local-mongoose": "4.0.0"
+    "passport": "0.3.2",
+    "passport-facebook": "2.1.1",
+    "passport-github": "1.1.0",
+    "passport-google": "0.3.0",
+    "passport-google-oauth": "1.0.0",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "4.0.0",
+    "passport-twitter": "1.0.4"
   }
 }
