--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cors": "2.8.1",
     "dotenv": "2.0.0",
     "express": "4.14.0",
+    "express-session": "1.14.2",
     "express-validator": "2.21.0",
     "mongodb": "2.2.11",
     "mongoose": "4.6.5",
