--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,11 @@
     "cors": "2.8.1",
     "dotenv": "2.0.0",
     "express": "4.14.0",
+    "express-jwt": "5.1.0",
+    "express-jwt-permissions": "0.5.0",
     "express-session": "1.14.2",
     "express-validator": "2.21.0",
+    "jsonwebtoken": "7.1.9",
     "mongodb": "2.2.11",
     "mongoose": "4.6.5",
     "mongoose-search-plugin": "0.1.2",
@@ -38,6 +41,7 @@
     "passport-github": "1.1.0",
     "passport-google": "0.3.0",
     "passport-google-oauth": "1.0.0",
+    "passport-jwt": "2.2.0",
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0",
     "passport-twitter": "1.0.4"
