--- a/client/bower.json
+++ b/client/bower.json
@@ -29,6 +29,7 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
-    "axios": "^0.15.2"
+    "axios": "^0.15.2",
+    "jwt-decode": "^2.1.0"
   }
 }
