--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,17 @@
   "name": "express-workshop",
   "version": "1.0.0",
   "description": "Express Workshop",
+  "main": "server.js",
   "scripts": {
     "start": "node server",
+    "start:pm2": "pm2 start",
     "dev": "nodemon server",
     "seed": "node seeds",
-    "test": "mocha"
+    "test": "npm run test:unit",
+    "test:unit": "mocha tests/unit",
+    "test:integration": "mocha tests/integration",
+    "test:api": "mocha tests/api",
+    "test:e2e": "mocha tests/e2e"
   },
   "repository": {
     "type": "git",
@@ -46,5 +52,10 @@
     "passport-local": "1.0.0",
     "passport-local-mongoose": "4.0.0",
     "passport-twitter": "1.0.4"
+  },
+  "devDependencies": {
+    "mocha": "3.1.2",
+    "nodemon": "1.11.0",
+    "pm2": "2.1.4"
   }
 }
