--- a/server/package.json
+++ b/server/package.json
@@ -40,8 +40,11 @@
     "jsonwebtoken": "7.1.9",
     "mongodb": "2.2.11",
     "mongoose": "4.6.5",
+    "mongoose-deep-populate": "3.0.0",
     "mongoose-increment": "0.6.1",
+    "mongoose-populate-virtuals": "1.0.3",
     "mongoose-search-plugin": "0.1.2",
+    "mongoose-sequence": "3.1.0",
     "mongoose-text-search": "0.0.2",
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
