Conform with server data seeder
Express Workshop => Workshop JS
New seed lot button

--- a/client/bower.json
+++ b/client/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "express-workshop-client",
-  "description": "Express Workshop Client",
+  "description": "Workshop JS Client",
   "main": "index.html",
   "authors": [
     "M Haidar Hanif <npm@mhaidarhanif.com> (https://mhaidarhanif.com)"
