Working DataTable with Semantic UI
Require timeout/completed table render before using DataTable
Remove handlebars-template when finished
Move out books-list-content-template from tbody
Bower: datatables
Event listeners after template compilation

--- a/client/bower.json
+++ b/client/bower.json
@@ -30,6 +30,7 @@
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
     "axios": "^0.15.2",
-    "jwt-decode": "^2.1.0"
+    "jwt-decode": "^2.1.0",
+    "datatables": "^1.10.12"
   }
 }
