--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/mhaidarh/express-workshop#readme",
   "dependencies": {
+    "acho": "3.1.1",
     "body-parser": "1.15.2",
     "camo": "^0.12.3",
     "casual": "1.5.8",
@@ -68,6 +69,7 @@
     "chance-cli": "1.0.6",
     "mocha": "3.1.2",
     "nodemon": "1.11.0",
-    "pm2": "2.1.4"
+    "pm2": "2.1.4",
+    "standard": "8.5.0"
   }
 }
