bitHound set package.json location and word limit

--- a/.bithoundrc
+++ b/.bithoundrc
@@ -1,5 +1,7 @@
 {
   "critics": {
-    "lint": {"engine": "standard"}
-  }
+    "lint": {"engine": "standard"},
+    "wc": { "limit": 300 }
+  },
+  "packageJsonLocation": "server/package.json"
 }
