--- a/client/bower.json
+++ b/client/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "express-workshop-client",
-  "description": "Workshop JS Client",
+  "name": "super-workshop-js",
+  "description": "Super Workshop JS Client",
   "main": "index.html",
   "authors": [
     "M Haidar Hanif <npm@mhaidarhanif.com> (https://mhaidarhanif.com)"
