--- a/server/package.json
+++ b/server/package.json
@@ -29,47 +29,34 @@
   },
   "homepage": "https://github.com/mhaidarh/super-workshop-js#readme",
   "dependencies": {
-    "acho": "3.1.1",
-    "body-parser": "1.15.2",
-    "camo": "^0.12.3",
-    "casual": "1.5.8",
-    "chance": "1.0.4",
-    "cors": "2.8.1",
-    "dotenv": "2.0.0",
-    "express": "4.14.0",
-    "express-jwt": "5.1.0",
-    "express-jwt-permissions": "0.5.0",
-    "express-session": "1.14.2",
-    "express-validator": "2.21.0",
-    "faker": "3.1.0",
-    "jsonwebtoken": "7.1.9",
-    "mocker-data-generator": "1.2.5",
-    "mongodb": "2.2.11",
-    "mongoose": "4.6.5",
-    "mongoose-deep-populate": "3.0.0",
-    "mongoose-increment": "0.6.1",
-    "mongoose-paginate": "5.0.3",
-    "mongoose-populate-virtuals": "1.0.3",
-    "mongoose-search-plugin": "0.1.2",
-    "mongoose-sequence": "3.1.0",
-    "mongoose-text-search": "0.0.2",
-    "nedb": "^1.8.0",
-    "passport": "0.3.2",
-    "passport-facebook": "2.1.1",
-    "passport-github": "1.1.0",
-    "passport-google": "0.3.0",
-    "passport-google-oauth": "1.0.0",
-    "passport-jwt": "2.2.0",
-    "passport-local": "1.0.0",
-    "passport-local-mongoose": "4.0.0",
-    "passport-twitter": "1.0.4",
-    "unirest": "0.5.1"
+    "acho": "^3.1.1",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "express-jwt-permissions": "^0.5.0",
+    "express-session": "^1.14.2",
+    "express-validator": "^2.21.0",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.6.8",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-sequence": "^3.1.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
-    "chance-cli": "1.0.6",
-    "mocha": "3.1.2",
-    "nodemon": "1.11.0",
-    "pm2": "2.1.4",
-    "standard": "8.5.0"
+    "chance-cli": "^1.0.6",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "npm-check-updates": "2.8.6",
+    "pm2": "^2.1.5",
+    "standard": "^8.5.0"
   }
 }
