--- a/.inch.yml
+++ b/.inch.yml
@@ -1,8 +1,8 @@
 files:
   # define files included in the analysis (defaults to ["{app,lib}/**/*.rb"])
   included:
-    - client/**/*.js
-    - server/**/*.js
+    - client-jquery/**/*.js
+    - server-express/**/*.js
   # define files excluded from the analysis (defaults to [])
   excluded:
     - plugins/vendor/**/*.js
