Reconfigure bitHound, Code Climate, Inch, Travis
Conform with the new repo structure

--- a/.bithoundrc
+++ b/.bithoundrc
@@ -13,5 +13,5 @@
     "lint": {"engine": "standard"},
     "wc": { "limit": 300 }
   },
-  "packageJsonLocation": "server-express/package.json"
+  "packageJsonLocation": "servers/server-express/package.json"
 }
