--- a/servers/server-express/package.json
+++ b/servers/server-express/package.json
@@ -41,7 +41,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
-    "express-validator": "^2.21.0",
+    "express-validator": "^3.1.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.8",
     "mongoose-paginate": "^5.0.3",
@@ -59,8 +59,8 @@
   "devDependencies": {
     "chance-cli": "^1.0.6",
     "mocha": "^3.1.2",
-    "npm-check-updates": "2.8.6",
+    "npm-check-updates": "^2.8.8",
     "pm2": "^2.1.5",
-    "standard": "^8.5.0"
+    "standard": "^8.6.0"
   }
 }
