Install some cool express middlewares
+ debug
+ cookie-parser
+ express-winston
+ morgan
+ winston
+ dotenv-extended

--- a/servers/server-express/package.json
+++ b/servers/server-express/package.json
@@ -38,22 +38,28 @@
   "dependencies": {
     "bcryptjs": "2.4.0",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
+    "debug": "^2.6.1",
+    "dotenv-extended": "^1.0.4",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "express-validator": "^3.1.0",
+    "express-winston": "^2.2.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.8",
     "mongoose-paginate": "^5.0.3",
     "mongoose-sequence": "^3.1.0",
     "mongoose-validator": "1.2.5",
+    "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "ramda": "0.23.0",
-    "request-ip": "1.2.3"
+    "request-ip": "1.2.3",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "chance-cli": "^1.0.6",
