Refine all configs: env + database + providers

--- a/tests/test-chai/.env.schema
+++ b/tests/test-chai/.env.schema
@@ -13,11 +13,11 @@ URL=
 # database
 
 NEDB_PATH=
-MONGO_HOST=
-MONGO_DATABASE=
-MONGO_USER=
-MONGO_PASS=
-MONGO_URI=
+MONGODB_HOST=
+MONGODB_DATABASE=
+MONGODB_USER=
+MONGODB_PASS=
+MONGODB_URI=
 
 # credentials
 
@@ -30,18 +30,18 @@ API_KEY_PRODUCTION=
 JWT_SECRET=
 SESSION_SECRET=
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK=
 
-FACEBOOK_ID=
-FACEBOOK_SECRET=
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
 FACEBOOK_CALLBACK=
 
-TWITTER_KEY=
-TWITTER_SECRET=
+TWITTER_API_KEY=
+TWITTER_API_SECRET=
 TWITTER_CALLBACK=
 
-GOOGLE_ID=
-GOOGLE_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK=
