Update all deps/devDeps to latest

--- a/servers/server-express/package.json
+++ b/servers/server-express/package.json
@@ -37,19 +37,19 @@
   "homepage": "https://github.com/mhaidarh/super-workshop-js#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.1",
-    "debug": "^2.6.1",
+    "cors": "2.8.3",
+    "debug": "^2.6.3",
     "dotenv-extended": "^1.0.4",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
-    "express-validator": "^3.1.0",
-    "express-winston": "^2.2.0",
-    "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.6.8",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "express-validator": "^3.1.2",
+    "express-winston": "^2.3.0",
+    "jsonwebtoken": "^7.3.0",
+    "mongoose": "^4.9.2",
     "mongoose-paginate": "^5.0.3",
-    "mongoose-sequence": "^3.1.0",
+    "mongoose-sequence": "^3.2.0",
     "mongoose-validator": "1.2.5",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
@@ -58,14 +58,14 @@
     "passport-google-oauth": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "ramda": "^0.23.0",
-    "request-ip": "1.2.3",
+    "request-ip": "^2.0.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
     "chance-cli": "^1.0.6",
-    "mocha": "^3.1.2",
-    "npm-check-updates": "^2.8.8",
-    "pm2": "^2.1.5",
-    "standard": "^8.6.0"
+    "mocha": "^3.2.0",
+    "npm-check-updates": "^2.10.4",
+    "pm2": "^2.4.3",
+    "standard": "^10.0.2"
   }
 }
