--- a/servers/server-express/package.json
+++ b/servers/server-express/package.json
@@ -46,6 +46,7 @@
     "express-session": "^1.15.2",
     "express-validator": "^3.1.2",
     "express-winston": "^2.3.0",
+    "helmet": "^3.5.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.2",
     "mongoose-paginate": "^5.0.3",
