--- a/servers/server-express/package.json
+++ b/servers/server-express/package.json
@@ -44,6 +44,7 @@
     "debug": "^2.6.3",
     "dotenv-extended": "^1.0.4",
     "express": "^4.15.2",
+    "express-limiter": "^1.6.0",
     "express-session": "^1.15.2",
     "express-validator": "^3.1.2",
     "express-winston": "^2.3.0",
