Add SourceClear agent for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,4 @@ script:
 addons:
   code_climate:
     repo_token: 212c607f23a9eee424108f3171bfee6d2eb3292091e3f1f8ff35360d075ca9a0
+  srcclr: true
